feat: schema improvements
