# packages/rest/src/schemas/PresentationProofRequest.ts
@@ -1,11 +1,0 @@
-import { IsBoolean, IsOptional, IsString } from 'class-validator'
-
-export class PresentationProofRequest {
-  @IsOptional()
-  @IsBoolean()
-  public filterByPresentationPreview?: boolean
-
-  @IsOptional()
-  @IsString()
-  public comment?: string
-}
